# M5-Utah

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Install Utah Flux.bat  Install UtahClaw.bat  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  Start Utah Flux Studio.bat  Start UtahClaw Studio.bat  index.html  mkdocs.yml  pyproject.toml  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
adr/: 0001-intent-first-architecture.md  0002-thin-firmware-boundary.md  0003-registry-driven-unit-model.md  0004-hardware-context-protocol.md  0005-dynamic-bus-and-gossip-mesh.md  0006-time-travel-replay.md  0007-zero-downtime-fork-and-event-piping.md  0008-binwire-fastpath-serialization.md  0009-raft-consensus-and-sandboxing.md  0010-crypto-enclave-and-kalman-filter.md  0011-runtime-jit-hot-loading.md  0012-vectorwire-causal-sync.md  0013-resource-pruning-and-speculative-staging.md  0014-dag-state-graph-and-delta-compression.md  0015-assembly-trampoline-and-memory-overlays.md  0016-cross-core-ring-pipe-and-zero-copy-tokenizer.md  0022-webusb-vibe-gateway.md  (+31 more)
host/: README.md  pyproject.toml
host/m5resolver/: __init__.py  agent.py  android_bridge.py  android_mesh.py  binwire.py  branch_flatten.py  bus_validation.py  cli.py  consensus.py  controller.py  dashboard.py  delta_engine.py  dual_core_harness.py  ecc_codec.py  events.py  fastpath.py  fluxwire.py  graph_engine.py  jit_compiler.py  jit_pipeline.py  kernel_runtime.py  memory_compiler.py  memory_profiler.py  mesh.py  mitigation_engine.py  optimizer.py  registry.py  registry_ops.py  remediation.py  replay_engine.py  resource_orchestrator.py  rpp_compiler.py  safety.py  scheduler_compiler.py  secure_wire.py  security.py  simulation.py  stream_packer.py  stream_relay.py  sync_mesh.py  (+7 more)
host/m5resolver/static/: vibe-ide.html
host/utah_flux/: __init__.py  bricks.py  compiler.py  field_compiler.py  hardware_matrix.py  omniscient_daemon.py  project.py  studio.py  templates.py  utahclaw_daemon.py
host/utah_flux/static/: app.css  app.js  claw_studio.html  index.html  omniscient.html  utah_studio.html
(+288 files in other folders)
