[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m5resolver"
version = "0.1.0"
description = "Intent-resolution substrate for M5Stack ecosystem consolidation"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5",
]

[project.scripts]
m5resolver = "m5resolver.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
